--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
-    "build": "run-p type-check \"build-only {@}\" --",
+    "build": "vite build",
     "preview": "vite preview",
-    "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --fix"
   },
@@ -37,12 +36,12 @@
     "sass-embedded": "^1.86.3",
     "typescript": "~5.8.2",
     "unplugin-auto-import": "^19.1.1",
-    "unplugin-fonts": "^1.3.1",
     "unplugin-vue-components": "^28.4.1",
     "unplugin-vue-router": "^0.12.0",
     "vite": "^6.2.2",
     "vite-plugin-vue-layouts-next": "^0.0.8",
     "vite-plugin-vuetify": "^2.1.1",
+    "vite-plugin-webfont-dl": "^3.11.1",
     "vue-router": "^4.5.0",
     "vue-tsc": "^2.2.8"
   }
